--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <nav>
 <h2>💪 AI Fitness</h2>
+
 <a href="dashboard.html">Dashboard</a>
+<a href="diet.html">Diet Plan</a>
+<a href="PA&B.html">Physical Activity</a>
 <a href="login.html" onclick="logout()">Logout</a>
 </nav>
 
