--- a/login.html
+++ b/login.html
@@ -1,22 +1,110 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Login</title>
-<link rel="stylesheet" href="css/style.css">
+    <title>Health & Fitness Login</title>
+
+    <style>
+        body{
+            margin:0;
+            font-family: 'Segoe UI', sans-serif;
+            background: linear-gradient(to right, #36d1dc, #5b86e5);
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            height:100vh;
+        }
+
+        .login-container{
+            width:400px;
+            border-radius:20px;
+            overflow:hidden;
+            box-shadow:0 20px 40px rgba(0,0,0,0.3);
+            background:white;
+        }
+
+        .image-section{
+            background:url("https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b") no-repeat center;
+            background-size:cover;
+            height:170px;
+        }
+
+        .form-section{
+            padding:25px;
+        }
+
+        h2{
+            text-align:center;
+            color:#5b86e5;
+            margin-bottom:20px;
+        }
+
+        input{
+            width:100%;
+            padding:12px;
+            margin:10px 0;
+            border-radius:8px;
+            border:none;
+            font-size:14px;
+        }
+
+        input[type="email"]{
+            background:#e3f2fd;
+        }
+
+        input[type="password"]{
+            background:#f3e5f5;
+        }
+
+        button{
+            width:100%;
+            padding:12px;
+            background:#5b86e5;
+            color:white;
+            font-weight:bold;
+            border:none;
+            border-radius:8px;
+            cursor:pointer;
+            transition:0.3s;
+            margin-top:10px;
+        }
+
+        button:hover{
+            background:#36d1dc;
+            transform:scale(1.05);
+        }
+
+        p{
+            text-align:center;
+            margin-top:12px;
+            font-size:14px;
+        }
+
+        a{
+            color:#5b86e5;
+            text-decoration:none;
+            font-weight:bold;
+        }
+    </style>
 </head>
+
 <body>
 
-<div class="form-box">
-<h2>Login</h2>
+<div class="login-container">
 
-<input type="email" id="loginEmail" placeholder="Email">
-<input type="password" id="loginPass" placeholder="Password">
+    <div class="image-section"></div>
 
-<button onclick="login()">Login</button>
-<p>No account? <a href="register.html">Register</a></p>
+    <div class="form-section">
+        <h2>🏋 Fitness Login</h2>
+
+        <input type="email" placeholder="Email Address">
+        <input type="password" placeholder="Password">
+
+        <button>Login</button>
+
+        <p>Don't have an account? <a href="register.html">Register</a></p>
+    </div>
 
 </div>
 
-<script src="js/auth.js"></script>
 </body>
 </html>
