--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h2>💪 AI Fitness</h2>
 
 <a href="dashboard.html">Dashboard</a>
+<a href="workoutPlan.html">Dashboard</a>
 <a href="diet.html">Diet Plan</a>
 <a href="PA&B.html">Physical Activity</a>
 <a href="login.html" onclick="logout()">Logout</a>
