--- a/index.html
+++ b/index.html
@@ -1,47 +1,368 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>AI Fitness System</title>
-<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>BioSync AI - Personalized Fitness Intelligence System</title>
+        <link rel="stylesheet" href="css/style.css" />
+    </head>
+    <body>
+        <!-- Hero Section -->
+        <header class="hero">
+            <div class="container">
+                <div class="hero-content">
+                    <h1 class="hero-title">BioSync AI</h1>
+                    <p class="hero-subtitle">
+                        Personalized Fitness Intelligence System
+                    </p>
+                    <p class="hero-description">
+                        Generate personalized workout and nutrition plans
+                        powered by AI that adapt to your progress
+                    </p>
+                </div>
+            </div>
+        </header>
 
-<nav>
-<h2>💪 AI Fitness</h2>
+        <!-- Main Application -->
+        <main class="container">
+            <!-- User Profile Form Section -->
+            <section class="profile-section">
+                <div class="card">
+                    <h2 class="section-title">Create Your Profile</h2>
+                    <form id="profileForm" class="profile-form">
+                        <div class="form-grid">
+                            <!-- Basic Info -->
+                            <div class="form-group">
+                                <label for="age">Age</label>
+                                <input
+                                    type="number"
+                                    id="age"
+                                    name="age"
+                                    min="13"
+                                    max="100"
+                                    required
+                                />
+                            </div>
 
-<a href="dashboard.html">Dashboard</a>
-<a href="workoutPlan.html">Dashboard</a>
-<a href="diet.html">Diet Plan</a>
-<a href="PA&B.html">Physical Activity</a>
-<a href="login.html" onclick="logout()">Logout</a>
-</nav>
+                            <div class="form-group">
+                                <label for="gender">Gender</label>
+                                <select id="gender" name="gender" required>
+                                    <option value="">Select Gender</option>
+                                    <option value="male">Male</option>
+                                    <option value="female">Female</option>
+                                    <option value="other">Other</option>
+                                </select>
+                            </div>
 
-<div class="container">
-<h1>Generate Your Personalized Plan</h1>
+                            <div class="form-group">
+                                <label for="height">Height (cm)</label>
+                                <input
+                                    type="number"
+                                    id="height"
+                                    name="height"
+                                    min="120"
+                                    max="250"
+                                    required
+                                />
+                            </div>
 
-<input type="number" id="weight" placeholder="Weight (kg)">
-<input type="number" id="height" placeholder="Height (cm)">
+                            <div class="form-group">
+                                <label for="weight">Current Weight (kg)</label>
+                                <input
+                                    type="number"
+                                    id="weight"
+                                    name="weight"
+                                    min="30"
+                                    max="300"
+                                    step="0.1"
+                                    required
+                                />
+                            </div>
 
-<select id="goal">
-<option value="weight_loss">Weight Loss</option>
-<option value="muscle_gain">Muscle Gain</option>
-<option value="maintenance">Maintenance</option>
-</select>
+                            <!-- Fitness Goals -->
+                            <div class="form-group full-width">
+                                <label for="fitnessGoal"
+                                    >Primary Fitness Goal</label
+                                >
+                                <select
+                                    id="fitnessGoal"
+                                    name="fitnessGoal"
+                                    required
+                                >
+                                    <option value="">Select Goal</option>
+                                    <option value="fat_loss">Fat Loss</option>
+                                    <option value="muscle_gain">
+                                        Muscle Gain
+                                    </option>
+                                    <option value="maintenance">
+                                        Maintenance
+                                    </option>
+                                    <option value="endurance">Endurance</option>
+                                    <option value="strength">Strength</option>
+                                </select>
+                            </div>
 
-<select id="condition">
-<option value="none">No Condition</option>
-<option value="diabetes">Diabetes</option>
-<option value="hypertension">Hypertension</option>
-</select>
+                            <div class="form-group">
+                                <label for="fitnessLevel"
+                                    >Current Fitness Level</label
+                                >
+                                <select
+                                    id="fitnessLevel"
+                                    name="fitnessLevel"
+                                    required
+                                >
+                                    <option value="">Select Level</option>
+                                    <option value="beginner">Beginner</option>
+                                    <option value="intermediate">
+                                        Intermediate
+                                    </option>
+                                    <option value="advanced">Advanced</option>
+                                </select>
+                            </div>
 
-<button onclick="generatePlan()">Generate Plan</button>
+                            <!-- Workout Preferences -->
+                            <div class="form-group">
+                                <label for="workoutDays">Days per Week</label>
+                                <select
+                                    id="workoutDays"
+                                    name="workoutDays"
+                                    required
+                                >
+                                    <option value="">Select Days</option>
+                                    <option value="3">3 Days</option>
+                                    <option value="4">4 Days</option>
+                                    <option value="5">5 Days</option>
+                                    <option value="6">6 Days</option>
+                                    <option value="7">7 Days</option>
+                                </select>
+                            </div>
 
-<div id="result"></div>
+                            <div class="form-group">
+                                <label for="sessionDuration"
+                                    >Session Duration (minutes)</label
+                                >
+                                <select
+                                    id="sessionDuration"
+                                    name="sessionDuration"
+                                    required
+                                >
+                                    <option value="">Select Duration</option>
+                                    <option value="30">30 minutes</option>
+                                    <option value="45">45 minutes</option>
+                                    <option value="60">60 minutes</option>
+                                    <option value="90">90 minutes</option>
+                                </select>
+                            </div>
 
-</div>
+                            <div class="form-group">
+                                <label for="equipmentAccess"
+                                    >Equipment Access</label
+                                >
+                                <select
+                                    id="equipmentAccess"
+                                    name="equipmentAccess"
+                                    required
+                                >
+                                    <option value="">Select Equipment</option>
+                                    <option value="home">Home Equipment</option>
+                                    <option value="gym">Full Gym</option>
+                                    <option value="minimal">
+                                        Minimal/Bodyweight
+                                    </option>
+                                </select>
+                            </div>
 
-<script src="js/ai.js"></script>
-<script src="js/auth.js"></script>
-</body>
+                            <!-- Dietary Preferences -->
+                            <div class="form-group">
+                                <label for="dietaryPreference"
+                                    >Dietary Preference</label
+                                >
+                                <select
+                                    id="dietaryPreference"
+                                    name="dietaryPreference"
+                                    required
+                                >
+                                    <option value="">Select Preference</option>
+                                    <option value="omnivore">Omnivore</option>
+                                    <option value="vegetarian">
+                                        Vegetarian
+                                    </option>
+                                    <option value="vegan">Vegan</option>
+                                    <option value="keto">Ketogenic</option>
+                                    <option value="mediterranean">
+                                        Mediterranean
+                                    </option>
+                                </select>
+                            </div>
+
+                            <!-- Health Information -->
+                            <div class="form-group full-width">
+                                <label for="healthLimitations"
+                                    >Health Limitations/Injuries
+                                    (Optional)</label
+                                >
+                                <textarea
+                                    id="healthLimitations"
+                                    name="healthLimitations"
+                                    rows="3"
+                                    placeholder="Describe any injuries, medical conditions, or physical limitations..."
+                                ></textarea>
+                            </div>
+                        </div>
+
+                        <div class="form-actions">
+                            <button type="submit" class="btn-primary">
+                                Generate My AI Plan
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </section>
+
+            <!-- Generated Plans Section -->
+            <section
+                class="plans-section"
+                id="plansSection"
+                style="display: none"
+            >
+                <div class="plans-grid">
+                    <!-- Workout Plan -->
+                    <div class="card">
+                        <h2 class="section-title">Your Workout Plan</h2>
+                        <div id="workoutPlan" class="plan-content">
+                            <!-- Generated workout content -->
+                        </div>
+                    </div>
+
+                    <!-- Nutrition Plan -->
+                    <div class="card">
+                        <h2 class="section-title">Your Nutrition Plan</h2>
+                        <div id="nutritionPlan" class="plan-content">
+                            <!-- Generated nutrition content -->
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Progress Tracking Section -->
+            <section
+                class="progress-section"
+                id="progressSection"
+                style="display: none"
+            >
+                <div class="card">
+                    <h2 class="section-title">Track Your Progress</h2>
+                    <form id="progressForm" class="progress-form">
+                        <div class="form-grid">
+                            <div class="form-group">
+                                <label for="currentWeight"
+                                    >Current Weight (kg)</label
+                                >
+                                <input
+                                    type="number"
+                                    id="currentWeight"
+                                    name="currentWeight"
+                                    min="30"
+                                    max="300"
+                                    step="0.1"
+                                    required
+                                />
+                            </div>
+
+                            <div class="form-group">
+                                <label for="workoutDifficulty"
+                                    >Workout Difficulty Rating</label
+                                >
+                                <select
+                                    id="workoutDifficulty"
+                                    name="workoutDifficulty"
+                                    required
+                                >
+                                    <option value="">Rate Difficulty</option>
+                                    <option value="too_easy">Too Easy</option>
+                                    <option value="just_right">
+                                        Just Right
+                                    </option>
+                                    <option value="challenging">
+                                        Challenging
+                                    </option>
+                                    <option value="too_hard">Too Hard</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="adherenceLevel"
+                                    >Weekly Adherence Level</label
+                                >
+                                <select
+                                    id="adherenceLevel"
+                                    name="adherenceLevel"
+                                    required
+                                >
+                                    <option value="">Select Adherence</option>
+                                    <option value="excellent">
+                                        Excellent (90-100%)
+                                    </option>
+                                    <option value="good">Good (70-89%)</option>
+                                    <option value="fair">Fair (50-69%)</option>
+                                    <option value="poor">Poor (<50%)</option>
+                                </select>
+                            </div>
+
+                            <div class="form-group full-width">
+                                <label for="progressNotes"
+                                    >Additional Notes (Optional)</label
+                                >
+                                <textarea
+                                    id="progressNotes"
+                                    name="progressNotes"
+                                    rows="3"
+                                    placeholder="How are you feeling? Any challenges or wins to share?"
+                                ></textarea>
+                            </div>
+                        </div>
+
+                        <div class="form-actions">
+                            <button type="submit" class="btn-secondary">
+                                Update My Plan
+                            </button>
+                        </div>
+                    </form>
+                </div>
+
+                <!-- Progress Stats -->
+                <div class="card">
+                    <h3>Your Progress Stats</h3>
+                    <div id="progressStats" class="stats-grid">
+                        <!-- Progress statistics will be displayed here -->
+                    </div>
+                </div>
+            </section>
+
+            <!-- Motivational Message Area -->
+            <section class="motivation-section">
+                <div class="card motivation-card">
+                    <div id="motivationalMessage" class="motivation-content">
+                        <h3>Welcome to BioSync AI!</h3>
+                        <p>
+                            Start by creating your profile to receive your
+                            personalized fitness and nutrition plan.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="container">
+                <p>
+                    &copy; 2024 BioSync AI - Personalized Fitness Intelligence
+                    System
+                </p>
+            </div>
+        </footer>
+
+        <script src="script.js"></script>
+    </body>
 </html>
-
